--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Personal Portfolio</title>
 </head>
 <body>
-    Hello World!
+    <h1>Hi, I'm Dharm!</h1>
+    <h2>About Me</h2>
+    <p>Welcome to my portfolio website. Here you will find information about my projects, skills, and experiences.</p>    
+    <h2>Work Experience</h2>
+    <p> Sentia - Business Development Representative<br>Learning Mode AI - Strategic Marketing Analyst<br>Riipen - Software Developer Intern<br>Tim Hortons - Customer Service Associate</p>
+    <h2>My Projects</h2>
+    <p> Gymlytics -  React, Node.js, Express, MongoDB, Spring Boot, OpenAI API, Docker <br> Hospital Database - SQL, Java </p>
+    <h2>Contacts</h2>
+    <p> Email - dharmpat@outlook.com <br> LinkedIn - https://www.linkedin.com/in/dharmpatel05/ <br> Github - https://github.com/dharmp0 </p>
 </body>
 </html>
