--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link rel ="stylesheet" href = "style.css">
 </head>
 <body>
     <h1>Hi, I'm Dharm!</h1>
@@ -14,6 +15,6 @@
     <h2>My Projects</h2>
     <p> Gymlytics -  React, Node.js, Express, MongoDB, Spring Boot, OpenAI API, Docker <br> Hospital Database - SQL, Java </p>
     <h2>Contacts</h2>
-    <p> Email - dharmpat@outlook.com <br> LinkedIn - https://www.linkedin.com/in/dharmpatel05/ <br> Github - https://github.com/dharmp0 </p>
+    <p> <a href="mailto:dharmpat@outlook.com" target="_blank">Email</a> <br> <a href="https://www.linkedin.com/in/dharmpatel05" target="_blank">LinkedIn</a> <br><a href="https://github.com/dharmp0" target="_blank">GitHub</a> </p>
 </body>
 </html>
