--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </div>
         <div class = "nav-bar">
             <div class = "link"> <a href="#">Home</a></div>
-            <div class = "link"> <a href="#">About</a></div>
-            <div class = "link"> <a href="#">Projects</a></div>
-            <div class = "link"> <a href="#">Experience</a></div>
-            <div class = "link"> <a href="#">Skills</a></div>
-            <div class = "link"> <a href="#">Contact</a></div>
+            <div class = "link"> <a href="#About">About</a></div>
+            <div class = "link"> <a href="#Projects">Projects</a></div>
+            <div class = "link"> <a href="#Experience">Experience</a></div>
+            <div class = "link"> <a href="#Skills">Skills</a></div>
+            <div class = "link"> <a href="#Contact">Contact</a></div>
         </div>
     </div>
 </nav>
