added js script for active section on nav-bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <span>Dharm</span>
         </div>
         <div class = "nav-bar">
-            <div class = "link"> <a href="#About">About</a></div>
+            <div class = "link"> <a href="#About" class = "active">About</a></div>
             <div class = "link"> <a href="#Projects">Projects</a></div>
             <div class = "link"> <a href="#Experience">Experience</a></div>
             <div class = "link"> <a href="#Skills">Skills</a></div>
@@ -180,6 +180,6 @@
             <li>Email - dharmpat@outlook.com</li>
     </ul>
 </section>
-
+<script src="script.js"></script>
 </body>
 </html>
