updated css for contact section  and nav-bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="This webpage is Dharm's personal portfolio, containing his past exerpeinces, projects, and his contact information.">
     <title>Personal Portfolio</title>
     <link rel="icon" href="images/website_icon.webp">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel ="stylesheet" href = "style.css">
 </head>
 <body>
@@ -24,12 +25,12 @@
             <div class = "link"> <a href="#Skills">Skills</a></div>
             <div class = "link"> <a href="#Contact">Contact</a></div>
         </div>
-    </div>
+    </div>  
 </nav>
 
 <!--Content-->
 <section id="About">
-    <h2>About Me</h2>
+    <h2>Hey, I'm Dharm! &#128075;</h2>
     <p>
         I'm an aspiring Software Engineer currently a junior pursing a Computer Science and Buisness Administration double-degree at Wilfrid Laurier University. I enjoy diving into new projects, meeting new people, and going to the gym. 
     </p>
@@ -174,11 +175,11 @@
 
 <section id="Contact">
     <h2>Contact</h2>
-    <ul>
-            <li>GitHub - https://github.com/dharmp0</li>
-            <li>LinkedIn - www.linkedin.com/in/dharmpatel05</li>
-            <li>Email - dharmpat@outlook.com</li>
-    </ul>
+    <div class = "socials">
+    <a href="https://github.com/dharmp0" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/dharmpatel05/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="mailto:dharmpat@outlook.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-envelope"></i></a>
+    </div>
 </section>
 <script src="script.js"></script>
 </body>
