added details to project and work experience + some more changes to background and nav colour

--- a/index.html
+++ b/index.html
@@ -40,47 +40,31 @@
     <h2>Projects</h2>
 
     <div class="projects">
-        <strong>Project 1</strong>
+        <strong>HawkLifts</strong>
         <ul>
-            <li>
-                p1
-            </li>
-            <li>
-                p2
-            </li>
-            <li>
-                p3
-            </li>
+            <li>Deploying a full-stack fitness platform that displays real-time gym occupancy to help students decide the best time to visit, while also supporting workout logging, nutrition tracking, and progress photo uploads.</li>
+            <li>Built the front end in React and built RESTful APIs with Node.js and Express to handle user check-ins, workout data, and media uploads, with MongoDB for data storage.</li>
+            <li>Integrated a Spring Boot microservice with OpenAI's API to generate fitness goals based on past workouts.</li>
+            <li>Used Docker to containerize backend services and standardize local development environments.</li>
+
         </ul>
     </div>
 
     <div class="projects">
-        <strong>Project 2</strong>
+        <strong>LeetCode-to-GitHub Commiter</strong>
         <ul>
-            <li>
-                p1
-            </li>
-            <li>
-                p2
-            </li>
-            <li>
-                p3
-            </li>
+            <li>Developed a Python-based command-line tool that automates committing solved LeetCode problems to a GitHub repository, prompting for metadata and handling Git operations end-to-end. </li>
+            <li>Implemented dynamic file handling logic to format filenames (e.g., 0001 two sum.py) and sort solutions into correct difficulty-based folders, ensuring consistency in repository structure.</li>
+            <li>Integrated Git commands using Python’s subprocess module to automatically add, commit, and push new solutions, streamlining a repetitive workflow and enabling version control of over 50+ problems.</li>
         </ul>
     </div>
 
     <div class="projects">
-        <strong>Project 3</strong>
+        <strong>Hospital Database</strong>
         <ul>
-            <li>
-                p1
-            </li>
-            <li>
-                p2
-            </li>
-            <li>
-                p3
-            </li>
+            <li>Designed and implemented a relational database using MySQL Workbench, defining entities, attributes, relationships, and constraints to ensure data integrity. </li>
+            <li>Developed and optimized complex SQL queries, including subqueries, window functions, and advanced joins, to extract meaningful insights from healthcare data.</li>
+            <li>Built a functional GUI interface using Python to interact with the database, enabling efficient management of hospital records while ensuring 3NF/BCNF normalization. </li>
         </ul>
     </div>
 
@@ -91,45 +75,27 @@
     <div class="jobs">
         <strong>Business Development Representative</strong>
         <ul>
-            <li>
-                p1
-            </li>
-            <li>
-                p2
-            </li>
-            <li>
-                p3
-            </li>
+            <li>Gained technical sales experience by joining 20+ client discovery calls, learning how cloud, cybersecurity, and virtualization solutions were positioned to address real business problems.</li>
+            <li>Achieved 45% open rates and 12% reply rates by targeting 1,000+ accounts across cloud, cybersecurity, and infrastructure through tailored outreach campaigns using HubSpot and ZoomInfo.</li>
+            <li>Booked 14 qualified intro meetings by personalizing outreach to IT decision-makers, focusing on common infrastructure challenges and emerging technology trends across cloud, security, and network performance. </li>
         </ul>
     </div>
 
     <div class="jobs">
         <strong>Strategic Marketing Analyst</strong>
         <ul>
-            <li>
-                p1
-            </li>
-            <li>
-                p2
-            </li>
-            <li>
-                p3
-            </li>
+            <li>Improved social media ad ROI by conducting research on paid ads and SEM strategies, leading to a 30% reallocation of the marketing budget toward higher-performing channels. </li>
+            <li>Increased email open rates by 15% and click-through rates by 10% by designing professional templates in Canva and executing targeted outreach campaigns through HubSpot. </li>
+            <li>Boosted newsletter sign-ups by 20% by designing and implementing partnership-focused CTA elements using Figma, improving UI consistency across WordPress pages.</li>
         </ul>
     </div>
 
     <div class="jobs">
         <strong>Software Engineer Intern</strong>
         <ul>
-            <li>
-                p1
-            </li>
-            <li>
-                p2
-            </li>
-            <li>
-                p3
-            </li>
+            <li> Delivered 3 client web projects by developing responsive, conversion-optimized landing pages and integrated lead generation forms using HTML, CSS, and JavaScript.</li>
+            <li>Reduced manual performance checks by 40% and improved issue response time by 25% by building an internal dashboard using JavaScript and Chart.js to visualize API latency, query efficiency, and user engagement metrics.</li>
+            <li>Improved page load time by 30% by optimizing SQL queries and restructuring database indexes, reducing server strain and enhancing user experience across high-traffic pages.</li>
         </ul>
     </div>
 
@@ -140,15 +106,16 @@
 
         <div class = "cert"><strong>JPMorgan Chase & Co. - Software Engineering Job Simulation</strong>
             <ul>
-                 <li>Applied Java, Spring Boot, REST APIs, SQL, Maven, and Kafka to simulate backend engineering workflows in a banking context</li>
+                 <li>Engineered a Kafka-driven microservice to consume and validate financial transactions, implementing businesslogic for balance updates and data persistence using Java, Spring Boot, and H2.</li>
+                 <li>Integrated external REST APIs and exposed new endpoints to simulate real-world financial infrastructure, applying principles of distributed systems, modular architecture, and client-server communication.</li>
             </ul>
+
         </div>
 
         <div class = "cert"><strong>Microsoft Azure Fundamentals</strong>
             <ul>
-                <li>
-                Demonstrated foundational knowledge of cloud concepts, Azure services, workloads, security, and pricing models.  
-                </li>
+                <li>Learned core cloud computing principles including virtualization, scalability, and elasticity.</li>
+                <li>Understood cloud service models (IaaS, PaaS, SaaS) and deployment models (public, private, hybrid).</li>
             </ul>
         </div>
 
