updated nav bar, general colouring, and worked on about section + added comments

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <!--navbar-->
 <nav>
     <div class = "nav-container">
-        <div class = "logo">
-            <span>Dharm</span>
-        </div>
+        <div class = "logo"><span>Dharm</span></div>
         <div class = "nav-bar">
             <div class = "link"> <a href="#About" class = "active">About</a></div>
             <div class = "link"> <a href="#Projects">Projects</a></div>
@@ -30,6 +28,7 @@
 
 <!--Content-->
 <section id="About">
+    <hr style="width: 50px; border: 2px solid #60a5fa; border-radius: 10px;">
     <h2>Hey, I'm Dharm! &#128075;</h2>
     <p>
         I'm an aspiring Software Engineer currently a junior pursing a Computer Science and Buisness Administration double-degree at Wilfrid Laurier University. I enjoy diving into new projects, meeting new people, and going to the gym. 
@@ -143,8 +142,8 @@
 <section id="Contact">
     <h2>Contact</h2>
     <div class = "socials">
-    <a href="https://github.com/dharmp0" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
     <a href="https://www.linkedin.com/in/dharmpatel05/" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="https://github.com/dharmp0" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
     <a href="mailto:dharmpat@outlook.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-envelope"></i></a>
     </div>
 </section>
