--- a/index.html
+++ b/index.html
@@ -171,10 +171,20 @@
     </div>
 </section>
 
+
 <div id="certModal" class="modal">
   <span class="close">&times;</span>
   <img class="modal-content" id="certModalImg">
 </div>
+
+
+<footer class="site-footer">
+  <div class="footer-content">
+    <p>Made by Dharm Patel © 2025</p>
+  </div>
+</footer>
+
+
 <script src="script.js"></script>
 </body>
 </html>
