--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class="projects">
         <h3>HawkLifts <span> | React, Node.js, Spring Boot, Express, MongoDB, OpenAI API, Docker</span></h3>
-        <p>May 2025 - Present</p>
+        <p>Aug. 2025</p>
         <ul>
             <li>Deploying a <strong>full-stack fitness platform</strong> that displays real-time gym occupancy to help students decide the best time to visit, while also supporting workout logging, nutrition tracking, and progress photo uploads.</li>
             <li>Built the front end in <strong>React</strong> and built <strong>RESTful APIs</strong> with <strong>Node.js</strong> and <strong>Express</strong> to handle user check-ins, workout data, and media uploads, with <strong>MongoDB</strong> for data storage.</li>
@@ -86,39 +86,53 @@
             <li>Built a functional GUI using <strong>Python</strong> to interact with the database, enabling efficient management of hospital records while ensuring <strong>3NF/BCNF normalization</strong>. </li>
         </ul>
     </div>
-
 </section>
+
 <section id="Experience">
-    <h2>Work Experience</h2>
-
-    <div class="jobs">
-        <h3>Business Development Representative <span> — Sentia</span></h3>
-        <p>May 2025 - Aug. 2025</p>
-        <ul>
-            <li>Gained technical sales experience by joining 20+ client discovery calls, learning how cloud, cybersecurity, and virtualization solutions were positioned to address real business problems.</li>
-            <li>Achieved 45% open rates and 12% reply rates by targeting  1,000+ accounts across cloud, cybersecurity, and infrastructure through tailored outreach campaigns using HubSpot and ZoomInfo.</li>
-            <li>Booked 14 qualified intro meetings by personalizing outreach to IT decision-makers, focusing on common infrastructure challenges and emerging technology trends across cloud, security, and network performance. </li>
-        </ul>
-    </div>
-
-    <div class="jobs">
-        <h3>Strategic Marketing Analyst <span> — Learning Mode AI</span></h3>
-        <p> Mar. 2025 - May 2025 </p>
+    <h2>Experience</h2>
+    <div class="timeline">
+        <div class="timeline__component">
+            <div class="timeline__date timeline__date--right"><span>&lt;May 2025 - Aug. 2025&gt;</span></div>
+        </div>
+        <div class="timeline__middle">
+            <div class="timeline__point"></div>
+        </div>
+        <div class="timeline__component timeline__component--bg">
+        <h3>Business Development Representative <br><span>Sentia</span></h3>
+            <ul>
+                <li>Gained technical sales experience by joining 20+ client discovery calls, learning how cloud, cybersecurity, and virtualization solutions were positioned to address real business problems.</li>
+                <li>Achieved 45% open rates and 12% reply rates by targeting  1,000+ accounts across cloud, cybersecurity, and infrastructure through tailored outreach campaigns using HubSpot and ZoomInfo.</li>
+                <li>Booked 14 qualified intro meetings by personalizing outreach to IT decision-makers, focusing on common infrastructure challenges and emerging technology trends across cloud, security, and network performance. </li>
+            </ul>
+        </div>
+        <div class="timeline__component timeline__component--bg">
+        <h3>Strategic Marketing Analyst <br><span>Learning Mode AI</span></h3>
         <ul>
             <li>Improved social media ad ROI by conducting research on paid ads and SEM strategies, leading to a 30% reallocation of the marketing budget toward higher-performing channels. </li>
             <li>Increased email open rates by 15% and click-through rates by 10% by designing professional templates in Canva and executing targeted outreach campaigns through HubSpot. </li>
             <li>Boosted newsletter sign-ups by 20% by designing and implementing partnership-focused CTA elements using Figma, improving UI consistency across WordPress pages.</li>
         </ul>
-    </div>
-
-    <div class="jobs">
-        <h3>Software Engineer Intern <span> — Riipen</span></h3>
-        <p>Jan. 2024 - Apr. 2024</p>
-        <ul>
-            <li> Delivered 3 client web projects by developing responsive, conversion-optimized landing pages and integrated lead generation forms using HTML, CSS, and JavaScript.</li>
-            <li>Reduced manual performance checks by 40% and improved issue response time by 25% by building an internal dashboard using JavaScript and Chart.js to visualize API latency, query efficiency, and user engagement metrics.</li>
-            <li>Improved page load time by 30% by optimizing SQL queries and restructuring database indexes, reducing server strain and enhancing user experience across high-traffic pages.</li>
-        </ul>
+        </div>
+        <div class="timeline__middle">
+            <div class="timeline__point"></div>
+        </div>
+        <div class="timeline__component">
+            <div class="timeline__date"><span>&lt;Mar. 2025 - May 2025&gt;</span></div>
+        </div>
+        <div class="timeline__component">
+            <div class="timeline__date timeline__date--right"><span>&lt;Jan. 2024 - Apr. 2024&gt;</Jan.></span></div>
+        </div>
+        <div class="timeline__middle">
+            <div class="timeline__point"></div>
+        </div>
+        <div class="timeline__component timeline__component--bg">
+            <h3>Software Engineer Intern <br><span>Riipen</span></h3>
+            <ul>
+                <li> Delivered 3 client web projects by developing responsive, conversion-optimized landing pages and integrated lead generation forms using HTML, CSS, and JavaScript.</li>
+                <li>Reduced manual performance checks by 40% and improved issue response time by 25% by building an internal dashboard using JavaScript and Chart.js to visualize API latency, query efficiency, and user engagement metrics.</li>
+                <li>Improved page load time by 30% by optimizing SQL queries and restructuring database indexes, reducing server strain and enhancing user experience across high-traffic pages.</li>
+            </ul>
+        </div>
     </div>
 
 </section>
