added js to change active navbar when user scrolls + changed website title + general padding changes

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="auther" content="Dharm Patel">
     <meta name="description" content="This webpage is Dharm's personal portfolio, containing his past exerpeinces, projects, and his contact information.">
-    <title>Personal Portfolio</title>
-    <link rel="icon" href="images/website_icon.webp">
+    <title>Dharm's Portfolio</title>
+    <link rel="icon" href="./images/website_icon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel ="stylesheet" href = "style.css">
+    <link rel ="stylesheet" href = "./style.css">
 </head>
 <body>
 
@@ -199,6 +199,6 @@
 </footer>
 
 
-<script src="script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
