--- a/index.html
+++ b/index.html
@@ -193,9 +193,17 @@
 
 
 <footer class="site-footer">
-  <div class="footer-content">
-    <p>Made by Dharm Patel © 2025</p>
-  </div>
+    <div class="footer">
+
+        <div class="copyright">
+            <p>Made by Dharm Patel © 2025</p>
+        </div>
+
+        <div class="top">
+            <p><a href=#About>Back to Top</a></p>
+        </div>
+
+    </div>
 </footer>
 
 
