--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="auther" content="Dharm Patel">
     <meta name="description" content="This webpage is Dharm's personal portfolio, containing his past exerpeinces, projects, and his contact information.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dharm's Portfolio</title>
     <link rel="icon" href="./images/website_icon.webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
