updated cert. descriptions + about section text changes

--- a/index.html
+++ b/index.html
@@ -161,8 +161,11 @@
         
         <div class = "cert-text"><h3>Microsoft Azure Fundamentals</h3>
             <ul>
-                <li>Learned core cloud computing principles including virtualization, scalability, and elasticity.</li>
-                <li>Understood cloud service models <strong>(IaaS, PaaS, SaaS)</strong> and deployment models <strong>(public, private, hybrid)</strong>.</li>
+                <li>Gained foundational knowledge of <strong>cloud computing models (IaaS, PaaS, SaaS), deployment types (public, private, hybrid)</strong>, and cost models (CapEx vs. OpEx).</li>
+                <li>Learned core Azure services across compute <strong>(Azure VMs, Azure Kubernetes Service, Virtual Desktop)</strong>, networking (VNet, NSGs, VPN, DNS), and storage (Blob, Disk, Queue, Files, Tables) with tools like AzCopy and Storage Explorer.</li>
+                <li>
+                Studied Azure governance, security, and monitoring through Microsoft Entra ID, <strong>conditional access, role-based access control, layered defense, Defender for Cloud</strong>, Azure Policy, Resource Locks, and Azure Monitor.
+                </li>
             </ul>
         </div>
 
@@ -174,7 +177,13 @@
         <div class = "cert-text"><h3>Fortinet Technical Introduction to Cybersecurity</h3>
             <ul>
                 <li>
-                    Gained hands-on understanding of core <strong>cybersecurity principles</strong>, network security, threat types, and Fortinet solutions.
+                    Learned core cybersecurity concepts including identification, authentication, authorization, and secure access principles such as <strong>AAA, PoLP, and role-based access control</strong>.
+                </li>
+                <li>
+                    Gained practical knowledge of network security technologies including <strong>firewalls, VPNs (IPsec, SSL), ZTNA</strong>, SD-WAN, and SASE, alongside encryption, PKI, and the <strong>CIA triad</strong>.
+                </li>
+                <li>
+                    Studied common cyber threats and mitigations, covering intrusion prevention, <strong>zero-day attacks, spoofing, hijacking, and DoS</strong>, as well as tools like NGFW, IPS, and <strong>sandboxing</strong>.
                 </li>
             </ul>
         </div>
