--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <h2>Projects</h2>
 
     <div class="projects">
-        <h3>HawkLifts <span> | React, Node.js, Spring Boot, Express, MongoDB, OpenAI API, Docker</span></h3>
-        <p>Aug. 2025</p>
+        <h3>HawkLifts <span> | React, Node.js, Express, MongoDB, OpenAI API, Docker</span></h3>
+        <p>Aug. 2025 - Present</p>
         <ul>
             <li>Deploying a <strong>full-stack fitness platform</strong> that displays real-time gym occupancy to help students decide the best time to visit, while also supporting workout logging, nutrition tracking, and progress photo uploads.</li>
-            <li>Built the front end in <strong>React</strong> and built <strong>RESTful APIs</strong> with <strong>Node.js</strong> and <strong>Express</strong> to handle user check-ins, workout data, and media uploads, with <strong>MongoDB</strong> for data storage.</li>
-            <li>Integrated a <strong>Spring Boot</strong> microservice with <strong>OpenAI's API</strong> to generate fitness goals based on past workouts.</li>
-            <li>Used <strong>Docker</strong> to containerize backend services and standardize local development environments.</li>
+            <li>Building the front end in <strong>React</strong> and <strong>RESTful APIs</strong> with <strong>Node.js</strong> and <strong>Express</strong> to handle user check-ins, workout data, and media uploads, with <strong>MongoDB</strong> for data storage.</li>
+            <li>Integrating <strong>OpenAI's API</strong> to generate fitness goals based on past workouts.</li>
+            <li>Using <strong>Docker</strong> to containerize backend services and standardize local development environments.</li>
 
         </ul>
     </div>
