new project added

--- a/index.html
+++ b/index.html
@@ -140,6 +140,29 @@
 <section id="Projects">
     <h2>Projects</h2>
     <div class="projects-grid">
+         <div class="project-card">
+            <div class="project-image">
+                <img src="images/car-rental.png" alt="Car Rental System">
+            </div>
+            <div class="project-content">
+                <div class="project-header">
+                    <h3>Car Rental System</h3>
+                    <div class="project-links">
+                        <a href="https://github.com/Aaravgt/car-rental-app" target="_blank" class="project-link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </div>
+                </div>
+                <p class="project-description">A full stack car rental platform that lets users browse vehicles, compare prices, create and manage reservations, and view rental activity, while providing admins with system wide reports for rentals, revenue, and cancellations.</p>
+                <div class="project-tech">
+                    <span class="tech-tag">React</span>
+                    <span class="tech-tag">Node.js</span>
+                    <span class="tech-tag">Express</span>
+                    <span class="tech-tag">SQLite</span>
+                    <span class="tech-tag">REST API</span>
+                </div>
+            </div>
+        </div>
         <div class="project-card">
             <div class="project-image">
                 <img src="images/hawklifts.png" alt="HawkLifts Project">
