minor ui changes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                     <img src="images/manulife.png" alt="Manulife Logo">
                 </div>
                 <div class="exp-title">
-                    <h3>Technology Intern - Manulife</h3>
+                    <div class="exp-title-row">
+                        <h3>Technology Intern</h3>
+                        <div class="exp-company">Manulife</div>
+                    </div>
                     <div class="exp-date">Incoming Winter 2026</div>
                 </div>
             </div>
@@ -81,7 +84,10 @@
                     <img src="images/laurier.avif" alt="Wilfrid Laurier University Logo">
                 </div>
                 <div class="exp-title">
-                    <h3>Data Engineering Research Assistant - Wilfrid Laurier University</h3>
+                    <div class="exp-title-row">
+                        <h3>Data Engineering Research Assistant</h3>
+                        <div class="exp-company">Wilfrid Laurier University</div>
+                    </div>
                     <div class="exp-date">September 2025 - Present</div>
                 </div>
             </div>
@@ -96,7 +102,10 @@
                     <img src="images/sentia.svg" alt="Sentia Solutions Logo">
                 </div>
                 <div class="exp-title">
-                    <h3>Business Development Representative - Sentia Solutions</h3>
+                    <div class="exp-title-row">
+                        <h3>Business Development Representative</h3>
+                        <div class="exp-company">Sentia Solutions</div>
+                    </div>
                     <div class="exp-date">May 2025 - August 2025</div>
                 </div>
             </div>
@@ -111,7 +120,10 @@
                     <img src="images/learningmode.jpg" alt="Learning Mode AI Logo">
                 </div>
                 <div class="exp-title">
-                    <h3>Strategic Marketing Analyst - Learning Mode AI</h3>
+                    <div class="exp-title-row">
+                        <h3>Strategic Marketing Analyst</h3>
+                        <div class="exp-company">Learning Mode AI</div>
+                    </div>
                     <div class="exp-date">March 2025 - May 2025</div>
                 </div>
             </div>
@@ -126,7 +138,10 @@
                     <img src="images/riipen.png" alt="Riipen Logo">
                 </div>
                 <div class="exp-title">
-                    <h3>Software Engineer Intern - Riipen</h3>
+                    <div class="exp-title-row">
+                        <h3>Software Engineer Intern</h3>
+                        <div class="exp-company">Riipen</div>
+                    </div>
                     <div class="exp-date">January 2024 - April 2024</div>
                 </div>
             </div>
