--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <p>I'm a junior at Wilfrid Laurier University pursuing a double degree in Computer Science and Business Administration, gaining hands-on <a href="#Experience">experience</a> across both technology and business.</p>
             
-            <p>Over the summer, I worked as a Business Development Representative at Sentia Solutions, and I’m now a Data Engineering Research Assistant at Wilfrid Laurier University, focusing on data collation and refinement for intelligent transportation systems.</p>
+            <p>I’m currently a Software Engineering Intern at Manulife, focused on building backend systems for internal platforms. I've previously worked as a Data Engineering Research Assistant at Wilfrid Laurier University and as a Business Development Representative at Sentia Solutions.</p>
 
             <p>I’m constantly working on new <a href="#Projects">projects</a> to apply what I’ve learned, while also expanding my skills and increasing my proficiency in various technologies by pursuing <a href="#Certifications">certifications</a>.</p>
 
@@ -67,14 +67,14 @@
                 </div>
                 <div class="exp-title">
                     <div class="exp-title-row">
-                        <h3>Technology Intern</h3>
+                        <h3>Software Engineer Intern</h3>
                         <div class="exp-company">Manulife</div>
                     </div>
-                    <div class="exp-date">Incoming Winter 2026</div>
+                    <div class="exp-date">January 2026 - Present</div>
                 </div>
             </div>
             <div class="exp-content">
-                <p>Joining the Data Engineering team to support development of scalable data pipelines and analytics workflows.</p>
+                <p>Building backend services for AI enabled internal platforms.</p>
             </div>
         </div>
 
@@ -88,11 +88,11 @@
                         <h3>Data Engineering Research Assistant</h3>
                         <div class="exp-company">Wilfrid Laurier University</div>
                     </div>
-                    <div class="exp-date">September 2025 - Present</div>
+                    <div class="exp-date">September 2025 - December 2025</div>
                 </div>
             </div>
             <div class="exp-content">
-                <p>Working on data collation and refinement for intelligent transportation systems.</p>
+                <p>Supported machine learning and LLM research by collating and refining large scale transportation datasets for intelligent transportation systems.</p>
             </div>
         </div>
 
