added darkmode feature

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <div class = "link"> <a href="#Projects">Projects</a></div>
             <div class = "link"> <a href="#Certifications">Certifications</a></div>
         </div>
+        <button class="theme-toggle" id="theme-toggle" type="button" aria-label="Switch to dark mode" title="Switch to dark mode">
+            <i class="fa-solid fa-moon" aria-hidden="true"></i>
+        </button>
     </div>  
 </nav>
 
