--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <p>I'm a junior at Wilfrid Laurier University pursuing a double degree in Computer Science and Business Administration, gaining hands-on <a href="#Experience">experience</a> across both technology and business.</p>
             
-            <p>I’m currently a Software Engineering Intern at Manulife, focused on building backend systems for internal platforms. I've previously worked as a Data Engineering Research Assistant at Wilfrid Laurier University and as a Business Development Representative at Sentia Solutions.</p>
+            <p>I’m currently a Software Engineering Intern at Manulife, focused on building backend systems for internal platforms. I've previously worked as a Research Assistant at Wilfrid Laurier University and as a Business Development Representative at Sentia Solutions.</p>
 
             <p>I’m constantly working on new <a href="#Projects">projects</a> to apply what I’ve learned, while also expanding my skills and increasing my proficiency in various technologies by pursuing <a href="#Certifications">certifications</a>.</p>
 
@@ -87,7 +87,7 @@
                 </div>
                 <div class="exp-title">
                     <div class="exp-title-row">
-                        <h3>Data Engineering Research Assistant</h3>
+                        <h3>Research Assistant</h3>
                         <div class="exp-company">Wilfrid Laurier University</div>
                     </div>
                     <div class="exp-date">September 2025 - December 2025</div>
@@ -123,7 +123,7 @@
                 </div>
                 <div class="exp-title">
                     <div class="exp-title-row">
-                        <h3>Strategic Marketing Analyst</h3>
+                        <h3>Growth Intern</h3>
                         <div class="exp-company">Learning Mode AI</div>
                     </div>
                     <div class="exp-date">March 2025 - May 2025</div>
